--- a/src/css/style.css
+++ b/src/css/style.css
@@ -95,6 +95,7 @@ h1 {
 }
 
 .chat__userlist {
+  word-wrap: break-word;
   flex: 0 0 30%;
   background-color: #edefec;
   border-top-right-radius: 7px;
@@ -104,6 +105,7 @@ h1 {
   flex-direction: column;
   align-items: center;
   padding-top: 15px;
+  overflow-y: auto;
 }
 
 .chat__user {
@@ -116,13 +118,19 @@ h1 {
 }
 
 .message__container {
+  max-width: 300px;
   width: 50%;
   margin-bottom: 10px;
 
 }
 
 .message__header {
+  font-size: 12px;
+}
+
+.message__body {
   font-size: 14px;
+  word-wrap: break-word;
 }
 
 .message__container-yourself {
@@ -135,7 +143,12 @@ h1 {
 }
 
 
+
 .message__container-interlocutor {
   margin-right: auto;
   text-align: left;
+}
+
+.message__container-interlocutor .message__header {
+  color: #413c3c;
 }
